2013/09/30
* re-use random generator to avaoid patterns in mines distribution
* build version 49, 1.6.6 for alpha channel

2013/05/22
* built version 48, 1.6.5

2013/01/18
* animate all field clicks
* adjust space for scrollbars to display-resolution

2013/01/17
* animate number click
 
2012/12/18
* bug fix: NPE on start for API=11 and API=12
* built version 46, 1.6.3
* built version 47, 1.6.4

2012/12/12
* optimize layout structure
* optimize background graphics 
* adjust font sizes for Nexus 7
* built version 45, 1.6.2

2012/12/07
* make highscore list item name bigger
* use optimized mines model
* better game info visualization

2012/08/10
* better visualize wrong flags on exploded boards
* enable actionbar home button navigation for Android >= 3.0
* built version 44, 1.6.1

2012/07/20
* support GoogleTV
* optional notifications, disabled by default
* basic action bar support
* built version 43, 1.6.0

2011/05/27
* integrated indonesian translation by Adrian Setyadi
* built version 37, 1.6.dev to test indonesian translation
* fix indonesian translation (use values-in instead of values-id)
* built version 38, 1.6.dev to test indonesian translation

2011/05/18
* scores list selector adjusted to theme

2011/05/16
* notification when leaving running game

2011/05/09
* maximize non-scroll dimension if only one scroll dimension
* bug fix: Zoom/Fit actions not working correctly in landscape mode

2011/05/07
* built version 36, 1.5.1, released to Motorola Shop4Apps
 
2011/05/05
* use includes to reduce duplicated layout definitions

2011/05/03
* bug fix: force close when using hardware acceleration (Honeycomb)
* minor layout tweaks for Honeycomb
* built version 35, 1.5.1 released to Android market

2011/04/29
* adjustments for Honeycomb action bar support
* built version 34, 1.5 released to Android market

2011/04/27
* no bomb image backgrounds in Honeycomb

2011/04/26
* keep correct flags on explosion instead of showing bomb

2011/04/21
* buttons drawing revisited