@@ -1,3 +1,6 @@
+2014/06/22
+* introduce setting for toggling field click animations
+
 2013/09/30
 * re-use random generator to avaoid patterns in mines distribution
 * build version 49, 1.6.6 for alpha channel
